Fix broken styles on page height over 100vw Shorten description over 20 characters

--- a/frontend/src/Components/Supplies/Supplies.module.css
+++ b/frontend/src/Components/Supplies/Supplies.module.css
@@ -1,6 +1,6 @@
 .wrapper{
     width: 100vw;
-    height: 100vh;
+    height: 100%;
 
     display: grid;
     grid-template-rows: 160px 1fr 160px;
