--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,400');
 
+
 html, body, #root{
+  min-height: 100% !important;
   width: 100vw;
-  height: 100vh;
 }
 
 body {
